syntax = "proto3";

package admin;

option go_package = "./pkg/pb";

service Admin{
    rpc AdminSignup(AdminSignupRequest) returns(AdminSignupResponse) {};
    rpc AdminLogin(AdminLoginRequest) returns (AdminLoginResponse) {};
}
message AdminSignupRequest{
    string firstname=1;
    string lastname=2;
    string email=3;
    string password=4;
}

message AdminSignupResponse{
    int64 status=1;
    AdminDetails adminDetails=2;
    string token=3;
}

message AdminDetails{
    uint64 id=1;
    string firstname=2;
    string lastname=3;
    string email=4;
}
message AdminLoginRequest{
    string email=1;
    string password=2;
}
message AdminLoginResponse{
    int64 status=1;
    AdminDetails adminDetails=2;
    string token=3;
}